--- a/application.properties
+++ b/application.properties
@@ -1,2 +1,2 @@
-application.title=config server test application
+application.title=config server app
 application.comment=this is the comment of the application config
