--- a/application.properties
+++ b/application.properties
@@ -1,2 +1,2 @@
-application.title=config server app
-application.comment=this is the comment of the app config
+application.title=config server
+application.comment=config server comment
