added common properties for my microservices

--- a/application.properties
+++ b/application.properties
@@ -1,2 +1,7 @@
-application.title=config server
-application.comment=config server comment
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+
+microservice.payment-service.endpoint[0].uri=http://PAYMENT-SERVICE/payment/save
+
+microservice.order-service.endpoint[0].uri=http://ORDER-SERVICE/order/save
