--- a/application.properties
+++ b/application.properties
@@ -2,6 +2,6 @@ eureka.client.service-url.default-zone=http://localhost:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
-microservice.payment-service.endpoint[0].uri=http://PAYMENT-SERVICE/payment/save
+microservice.payment-service.endpoints.endpoint.uri=http://PAYMENT-SERVICE/payment/save
 
-microservice.order-service.endpoint[0].uri=http://ORDER-SERVICE/order/save
+microservice.order-service.endpoint.endpoint.uri=http://ORDER-SERVICE/order/save
