--- a/application.properties
+++ b/application.properties
@@ -4,4 +4,4 @@ eureka.client.fetch-registry=true
 
 microservice.payment-service.endpoints.endpoint.uri=http://PAYMENT_SERVICE/payment/save
 
-microservice.order-service.endpoint.endpoint.uri=http://ORDER-SERVICE/order/save
+microservice.order-service.endpoints.endpoint.uri=http://ORDER-SERVICE/order/save
