--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-microservice.payment-service.endpoints.endpoint.uri=http://PAYMENT-SERVICE/payment/save
-microservice.order-service.endpoints.endpoint.uri=http://ORDER-SERVICE/order/save
+microservice.payment-service.endpoints.endpoint.uri=http://localhost:9191/payment/save
+microservice.order-service.endpoints.endpoint.uri=http:///localhost:9090/order/save
