--- a/application.properties
+++ b/application.properties
@@ -2,5 +2,5 @@ eureka.client.service-url.default-zone=http://localhost:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 #eureka.instance.hostname=localhost
-microservice.payment-service.endpoints.endpoint.uri=http://localhost:9191/payment/save
-microservice.order-service.endpoints.endpoint.uri=http:///localhost:9090/order/save
+microservice.payment-service.endpoints.endpoint.uri=http://PAYMENT-SERVICE/payment/save
+microservice.order-service.endpoints.endpoint.uri=http:///ORDER-SERVICE/order/save
