--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-#eureka.instance.hostname=localhost
+eureka.instance.hostname=localhost
 microservice.payment-service.endpoints.endpoint.uri=http://PAYMENT-SERVICE/payment/save
 microservice.order-service.endpoints.endpoint.uri=http:///ORDER-SERVICE/order/save
